fixing tests